Made stuff to work

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -24,6 +24,7 @@ github_username: username
 minimal_mistakes_skin: default
 search: true
 host: 0.0.0.0
+repository: yyarmoshyk/tech-notes.net
 
 # Build settings
 markdown: kramdown
