--- a/src/_config.yml
+++ b/src/_config.yml
@@ -13,14 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: Tech Notes
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+  Usefull Operations notes
+
+twitter_username: YYarmoshyk
+github_username: yyarmoshyk
 minimal_mistakes_skin: default
 search: true
 host: 0.0.0.0
@@ -62,9 +61,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Yaroslav Yarmoshyk"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "I've got much to tell"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
