--- a/src/_config.yml
+++ b/src/_config.yml
@@ -20,15 +20,15 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 twitter_username: YYarmoshyk
 github_username: yyarmoshyk
-minimal_mistakes_skin: default
 search: true
 host: 0.0.0.0
 repository: yyarmoshyk/tech-notes.net
 
 # Build settings
 markdown: kramdown
-# remote_theme: mmistakes/minimal-mistakes
 theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: default
+
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
@@ -59,6 +59,7 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-redirect-from
 
 author:
   name   : "Yaroslav Yarmoshyk"
