--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -1,12 +1,10 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
   - title: "About"
     url: /about/
+  - title: "Tags"
+    url: /tags/
+  - title: "Archive"
+    url: /posts/
 
 docs:
   - title: Categories
