--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -19,4 +19,4 @@ jobs:
           -v ${{ github.workspace }}/public:/myblog/public \
           -v ${{ github.workspace }}/src:/myblog \
           yyarmoshyk/jekyll-minimal-mistakes:ruby-2.5 \
-          /bin/bash -c "chmod -R 777 /myblog && cd /myblog && bundle && bundle exec jekyll build -d public"
+          /bin/bash -c "chmod -R 777 /myblog && pwd && ls -la && cd /myblog && bundle && bundle exec jekyll build -d public"
