--- a/src/_config.yml
+++ b/src/_config.yml
@@ -104,8 +104,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: true
+      read_time: false
+      comments: false
       share: true
       related: true
   # _pages
