--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Build the site in the yyarmoshyk/jekyll-minimal-mistakes:ruby-2.5 container
@@ -20,3 +18,9 @@ jobs:
           -v ${{ github.workspace }}/src:/myblog \
           yyarmoshyk/jekyll-minimal-mistakes:ruby-2.5 \
           /bin/bash -c "cd /myblog && bundle && bundle exec jekyll build -d public"
+  Deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Deploy site to S3
+      run: bash deploy_s3.sh
