--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -20,3 +20,10 @@ jobs:
           /bin/bash -c "cd /myblog && bundle && bundle exec jekyll build -d public"
     - name: Deploy to S3
       run: bash deploy_s3.sh
+      env:
+        AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+        AWS_ROLE: ${{ secrets.AWS_ROLE }}
+        AWS_USER: ${{ secrets.AWS_USER }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
