--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -18,10 +18,16 @@ jobs:
           -v ${{ github.workspace }}/src:/myblog \
           yyarmoshyk/jekyll-minimal-mistakes:ruby-2.5 \
           /bin/bash -c "cd /myblog && bundle && bundle exec jekyll build -d public"
+    - name: Archive artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: public
+          path: public
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Deploy to S3
       run: bash deploy_s3.sh
     env:
