Added icon for cloudflare post

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -16,7 +16,7 @@
 title: Tech Notes
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Полезные записки
+  Useful notes about DevOps and system engineering
 
 twitter_username: YYarmoshyk
 github_username: yyarmoshyk
