--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build_deploy:
+  build_static_and_deploy_to_s3:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
