Added condition for the Jekyll site CI

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -3,6 +3,8 @@ name: Jekyll site CI
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'src/**'    
   pull_request:
     branches: [ master ]
 
