--- a/.github/workflows/jeckyll_image.yml
+++ b/.github/workflows/jeckyll_image.yml
@@ -9,6 +9,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        docker login -u ${docker_login} -p ${docker_password};\
+        docker login -u ${{ secrets.docker_login }} -p ${{ secrets.docker_password }};\
         make build-image;\
         rm -rf ~/.docker || true
