--- a/src/Gemfile
+++ b/src/Gemfile
@@ -1,7 +1,6 @@
-source "https://rubygems.org"
+source "http://rubygems.org"
 
 gem "github-pages", group: :jekyll_plugins
-
 gem "tzinfo-data"
 gem "wdm", "~> 0.1.0" if Gem.win_platform?
 gem "minimal-mistakes-jekyll"
